--- a/generators/app/templates/src/index.html
+++ b/generators/app/templates/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-<% if (router === 'uirouter') { -%>
+<% if (router !== 'none') { -%>
     <base href="/">
 <% } -%>
     <meta charset="utf-8">
@@ -13,6 +13,8 @@
   <body>
 <% if (router === 'uirouter') { -%>
     <ui-view></ui-view>
+<% } else if (router === 'router') { -%>
+    <root></root>
 <% } else { -%>
     <App>Loading...</App>
 <% } -%>
